# terrain-generation

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.sh
assets/: fs.glsl  terrain_fs.glsl  terrain_vs.glsl  vs.glsl  water_fs.glsl
src/: Math.cpp  Math.h  Mesh.cpp  Mesh.h  Shader.cpp  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  WorldObject.cpp  WorldObject.h  main.cpp
